# Star-Wars-FG-Project

./: .gitignore  README.md
Star Wars EotE/: base.lua  base.xml  identityselectionlist.lua  license.html  logo.png.old
Star Wars EotE Library/: common.xml  db.xml  definition.xml
Star Wars EotE Library - Abilities/: common.xml  definition.xml
Star Wars EotE Library - Abilities and Talents/: common.xml  definition.xml
Star Wars EotE/classes/: base.xml
Star Wars EotE/classes/abilities/: ability.xml  abilitymain.xml  base.lua  base.xml  delete me criticalmain.xml  duty.xml  dutymain.xml  faith.xml  faithmain.xml  focus.xml  focusmain.xml  invention.xml  inventionmain.xml  morality.xml  moralitymain.xml  motivation.xml  motivationmain.xml  oath.xml  oathmain.xml  obligation.xml  obligationmain.xml  order.xml  ordermain.xml  reputation.xml  reputationmain.xml  tactic.xml  tacticmain.xml  talent.xml  talentmain.xml  trick.xml  trickmain.xml
Star Wars EotE/classes/actions/: base.lua  base.xml  blessing.xml  blessingconservative.xml  blessingdetails.xml  blessingmain.xml  (+26 more)
Star Wars EotE/definitions/: base.xml  categoryselectionsettings.xml  desktop.xml  dice.xml  diebox.xml  hotkeybar.xml  pollbox.xml  portraitsets.xml  tooltip.xml  viewerlistsettings.xml
Star Wars EotE/graphics/: base.xml
Star Wars EotE/managers/: abilitymanager.lua  actionmanager.lua  base.xml  charactermanager.lua  chatmanager.lua  conditionmanager.lua  databasemanager.lua  debugmanager.lua  desktopmanager.lua  dicepoolmanager.lua  dieboxmanager.lua  dieboxviewlistmanager.lua  exportmanager.lua  gmidentitymanager.lua  horsemanager.lua  initiativemanager.lua  languagemanager.lua  locationmanager.lua  minionManager.lua  modifierstack.lua  notemanager.lua  npcgroupmanager.lua  npcmanager.lua  partysheetmanager.lua  petmanager.lua  playerdbmanager.lua  preferencemanager.lua  retainermanager.lua  tokenmanager.lua  usermanager.lua  windowmanager.lua
Star Wars EotE/strings/: strings_campaign.xml
StarWarsIndexParser/: .clang-format  .gitignore  CMakeLists.txt
StarWarsIndexParser/data/: character_abilities.xml  character_talents.xml
StarWarsIndexParser/src/: AbilityParser.cpp  AbilityParser.h  CMakeLists.txt  FantasyGroundsLibraryWriter.cpp  FantasyGroundsLibraryWriter.h  Parser.cpp  Parser.h  TalentParser.cpp  TalentParser.h  main.cpp
(+482 files in other folders)
